Fix margin gap due to home button css

--- a/index.css
+++ b/index.css
@@ -127,18 +127,16 @@
     font-style: italic;
   }
 
+  .date {
+    font-size: 14px;
+    display: inline-block
+  }
+
   img {
     height: 25px;
     width: 25px;
-    position: relative;
-    left: 70px;
-    bottom: -20px;
-    float: left;
-  }
-
-  .date {
-    font-size: 14px;
-    float: left;
+    display: inline-block;
+    margin-left: 20px;
   }
 
   ul {
